--- a/myapp/settings.gradle
+++ b/myapp/settings.gradle
@@ -7,7 +7,7 @@
  * in the user manual at https://docs.gradle.org/7.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'myapp'
+rootProject.name = 'myapp3'
 // include('app')
 // include('app-common')
 // include('app-client')
