--- a/myapp/app-server/.project
+++ b/myapp/app-server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>myapp-server</name>
+	<name>myapp2-server</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -15,6 +15,11 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.springframework.ide.eclipse.boot.validation.springbootbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
@@ -22,7 +27,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1679987663121</id>
+			<id>1</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
