--- a/myapp/app-server/src/main/resources/application.properties
+++ b/myapp/app-server/src/main/resources/application.properties
@@ -21,3 +21,6 @@ mybatis.type-aliases-package=bitcamp.myapp.vo
 # web
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=200MB
+
+# react 
+spring.web.resources.static-locations=classpath:/static/,file:C:\Users\gram15\git\react_book_ex\hangang\build
