--- a/myapp/app-server/bin/main/application.properties
+++ b/myapp/app-server/bin/main/application.properties
@@ -9,10 +9,13 @@ server.servlet.context-path=/web
 
 # database
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/hangang
+#spring.datasource.url=jdbc:mariadb://localhost:3306/hangang
 #spring.datasource.url=jdbc:mariadb://172.17.0.2:3306/studydb
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mariadb://db-fttrb-kr.vpc-pub-cdb.ntruss.com:3306/hangang
+#spring.datasource.username=root
+#spring.datasource.password=1111
+spring.datasource.username=study
+spring.datasource.password=bitcamp!@#123
 
 # mybatis
 mybatis.type-aliases-package=bitcamp.myapp.vo
