--- a/myapp/react-app/package.json
+++ b/myapp/react-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -15,6 +17,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
