파일 정리및 갤러리

--- a/myapp/app-server/.project
+++ b/myapp/app-server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>myapp2-server</name>
+	<name>backend-server</name>
 	<comment></comment>
 	<projects/>
 	<natures>
@@ -14,10 +14,6 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
-			<arguments/>
-		</buildCommand>
-		<buildCommand>
-			<name>org.springframework.ide.eclipse.boot.validation.springbootbuilder</name>
 			<arguments/>
 		</buildCommand>
 	</buildSpec>
