--- a/myapp/app-server/src/main/resources/application.properties
+++ b/myapp/app-server/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.servlet.context-path=/web
 #spring.datasource.url=jdbc:mariadb://localhost:3306/hangang
 #spring.datasource.url=jdbc:mariadb://172.17.0.2:3306/studydb
 spring.datasource.url=jdbc:mariadb://db-fttrb-kr.vpc-pub-cdb.ntruss.com:3306/hangang
-#spring.datasource.username=root
+#spring.datasource.username=study
 #spring.datasource.password=1111
 spring.datasource.username=study
 spring.datasource.password=bitcamp!@#123
@@ -24,6 +24,3 @@ mybatis.type-aliases-package=bitcamp.myapp.vo
 # web
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=200MB
-
-# react 
-spring.web.resources.static-locations=classpath:/static/,file:C:\Users\gram15\git\react_book_ex\hangang\build
