--- a/myapp/react-app/package.json
+++ b/myapp/react-app/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
