--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -52,6 +52,8 @@ dependencies {
   annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
   annotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.1'
+  implementation 'com.sun.mail:jakarta.mail:1.6.7'
 }
 
 tasks.named('test') {
