--- a/myapp/react-app/package.json
+++ b/myapp/react-app/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.3",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
