--- a/myapp/react-app/package.json
+++ b/myapp/react-app/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "gsap": "^3.11.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
-  "proxy":"http://apis.data.go.kr",
+  "proxy": "http://apis.data.go.kr",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
